Speak MCP 2025-11-25, and refuse a newer revision as a handshake-era server
The endpoint's ceiling was 2025-06-18, so a client offering anything newer was
turned away by the MCP-Protocol-Version check and logged at WARN as though
something were wrong. Two changes, neither of which makes this server modern.

2025-11-25 joins the supported set and becomes the version an unrecognised one
is answered with. It is still a handshake revision — a session opens with
initialize — and the changelog from 2025-06-18 adds nothing to the envelope
this server uses: icons, tasks, elicitation and authorization discovery are all
optional and none of them are things Jeffrey sends.

From 2026-07-28 the protocol works differently: no handshake, a version in
every request's _meta, a mandatory server/discover. Jeffrey implements none of it,
and a client that speaks both eras works this out from the body of the 400 it
gets back — a recognised modern error means "modern server, retry with a
version it listed", anything else means "older server, open with initialize".
So the refusal deliberately keeps plain JSON-RPC -32600 rather than -32022
(UnsupportedProtocolVersionError), which would send a working client into a
retry loop over versions this server does not have; the supported list travels
in the message text, where it helps a person without changing what the client
concludes. The log line drops to INFO and says what it is: a version probe that
will fall back, not a refusal anybody needs to act on.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RhPy8MEUweeBtAc278CCqj